<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationFragment">

    <ImageView
        android:id="@+id/registration_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/txt_lets_get_started"
        app:layout_constraintBottom_toTopOf="@id/registration_username_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_username_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        android:textColorHint="@color/light"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/light_dark_selector"
        app:boxStrokeErrorColor="@color/anger"
        app:cursorErrorColor="@color/anger"
        app:errorEnabled="false"
        app:errorIconTint="@color/anger"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:errorTextColor="@color/anger"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/light_dark_selector"
        app:layout_constraintBottom_toTopOf="@id/registration_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_image"
        app:startIconDrawable="@drawable/ic_person_24dp"
        app:startIconTint="@color/light">

        <!--        android:drawableStart="@drawable/ic_user"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_username_text"
            style="@style/TextAppearance.CompileOrCry.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:inputType="text"
            android:textColor="@color/light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_name_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:hint="@string/name"
        android:textColorHint="@color/light"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/light_dark_selector"
        app:boxStrokeErrorColor="@color/anger"
        app:cursorErrorColor="@color/anger"
        app:errorEnabled="false"
        app:errorIconTint="@color/anger"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:errorTextColor="@color/anger"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/light_dark_selector"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_username_layout"
        app:startIconDrawable="@drawable/ic_text_field_24dp"
        app:startIconTint="@color/light">

        <!--        android:drawableStart="@drawable/ic_user"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_name_text"
            style="@style/TextAppearance.CompileOrCry.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:inputType="text"
            android:textColor="@color/light" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_name_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/registration_back"
            android:textColor="@color/light"
            app:strokeColor="@color/light" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/light"
            android:text="@string/registration_done"
            android:textColor="@color/dark" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>