...
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/img_profile" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/name"
            android:textColor="@color/light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/username_placeholder"
            android:textColor="@color/light"
...
